--- a/Python/Course/Fast_API_Zero/fast_zero/pyproject.toml
+++ b/Python/Course/Fast_API_Zero/fast_zero/pyproject.toml
@@ -8,7 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13,<4.0"
 dependencies = [
-    "fastapi (>=0.115.8,<0.116.0)"
+    "fastapi (>=0.115.8,<0.116.0)",
+    "uvicorn (>=0.34.0,<0.35.0)",
 ]
 
 
