--- a/Python/Course/Fast_API_Zero/fast_zero/pyproject.toml
+++ b/Python/Course/Fast_API_Zero/fast_zero/pyproject.toml
@@ -10,6 +10,9 @@ requires-python = ">=3.13,<4.0"
 dependencies = [
     "fastapi (>=0.115.8,<0.116.0)",
     "uvicorn (>=0.34.0,<0.35.0)",
+    "sqlalchemy (>=2.0.37,<3.0.0)",
+    "pydantic-settings (>=2.7.1,<3.0.0)",
+    "alembic (>=1.14.1,<2.0.0)",
 ]
 
 
