--- a/Python/Course/Fast_API_Zero/fast_zero/pyproject.toml
+++ b/Python/Course/Fast_API_Zero/fast_zero/pyproject.toml
@@ -13,6 +13,9 @@ dependencies = [
     "sqlalchemy (>=2.0.37,<3.0.0)",
     "pydantic-settings (>=2.7.1,<3.0.0)",
     "alembic (>=1.14.1,<2.0.0)",
+    "pyjwt (>=2.10.1,<3.0.0)",
+    "tzdata (>=2025.1,<2026.0)",
+    "pwdlib[argon2] (>=0.2.1,<0.3.0)",
 ]
 
 
